--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
             <li class="list-inline-item dropdown">
               <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
-                  <div><i class="fas-fa-user fa-lg"></i></div>
+                  <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My Account</p>
                 </div>
               </a>
@@ -83,9 +83,9 @@
               </div>
             </li>
             <li class="list-inline-item">
-              <a href="" class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link">
+              <a href="{% url 'view_bag' %}" class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link">
                 <div class="text-center">
-                  <div><i class="fas-fa-shopping-bag fa-lg"></i></div>
+                  <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                   <p class="my-0">
                     {% if grand_total %}
                       ${{ grand_total|floatformat:2 }}
